--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--added a table to put inormation next to the image simultaniously-->
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/Christmass Daniel.jpg" alt"young Daniel during christmass time"></td>
+      <td><img src="images/christmass.jpg" alt"young Daniel during christmass time"></td>
       <td>
         <h1>Daniel Knight</h1>
         <p><em><strong>Webb Develoment</strong> student</em></p>
