--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Daniel's Personal Site</title>
+  <!--this is internal CSS added to adress all the html elements within the index.html page-->
+  <style>
+  </style>
+  <!-- this link connects the stylesheet of css code to the entire webside and all pages-->
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
-<!--added a table to put inormation next to the image simultaniously-->
+  <!--added a table to put inormation next to the image simultaniously-->
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/christmass.jpg" alt"young Daniel during christmass time"></td>
+      <td><img src="images/christmass.jpg" alt"young Daniel during christmass time"></td>
       <td>
         <h1>Daniel Knight</h1>
         <p><em><strong>Webb Develoment</strong> student</em></p>
@@ -74,22 +81,22 @@
       </td>
       <td>
         <table cellspacing="10">
-          </tr>
-            <td>Fitness Program Development</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Card Shuffling</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
     </tr>
+    <td>Fitness Program Development</td>
+    <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Card Shuffling</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+  </table>
+  </td>
+  </tr>
   </table>
 
   <hr>
-  <a href="Hobbies.html">My Hobbies</a>
-<!-- <br> adds a line between the above and below code showing a vissable gap between information-->
+  <a href="Hobbies.HTML">My Hobbies</a>
+  <!-- <br> adds a line between the above and below code showing a vissable gap between information-->
   <br>
   <a href="Contact Me.html">Contact Me</a>
 
