--- a/Contact Me.html
+++ b/Contact Me.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,13 +15,13 @@
     <li>Email Address: Bobsyouruncle@gmail.com</li>
   </ul>
 <hr>
-<form class="" action="mailto:danielknight0811@gmail.com" method="post">
+<form action="mailto:danielknight0811@gmail.com" method="post" enctype="text/plain">
   <label>Your Name:</label>
-  <input type="text"><br>
+  <input type="text" name="yourname" value="">
   <label>Your Email:</label>
-  <input type="email" name="" value=""><br>
+  <input type="email" name="youremail" value=""><br>
   <label>Your Message</label><br>
-  <textarea name="name" rows="10" cols="30"></textarea><br>
+  <textarea name="yourmessage" rows="10" cols="30"></textarea><br>
   <input type="submit" name="">
 
 
